fixing contact label on footer and hamburger menu align

--- a/src/Styling/Footer.css
+++ b/src/Styling/Footer.css
@@ -276,8 +276,4 @@ footer{
       display: flex;
       justify-content: center;
     }
-
-    .phone-contact{
-      margin-bottom: .5rem;
-    }
   }
