--- a/src/Styling/Navigation.css
+++ b/src/Styling/Navigation.css
@@ -182,7 +182,7 @@ nav{
       border-radius: 10px;
       width: 100%;
       padding: .5rem .5rem;
-      border: 1px #ffffff solid;
+      background-color: #fda41e;
     }
 
     .nav-wrapper-mb{
@@ -314,7 +314,6 @@ nav{
       .hamburger-content ul{
         display: flex;
         flex-direction: column; /* Or row, depending on layout */
-        align-items: stretch; /* Ensures items take full width */
         list-style: none;
         padding: 0;
         margin: 0;
@@ -328,6 +327,8 @@ nav{
         flex: 1 1;
         text-decoration: none;
         color: white;
+        align-items: center;
+        justify-content: center;
       }
 
       .hamburger-content ul li{
